--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
             - run: yarn install --immutable
             - run: yarn build
             - run: yarn test
-
+            - run:
+                name: Firebase Deploy
+                command: ./node_modules/.bin/firebase deploy --token "$FIREBASE_TOKEN" --only hosting
 workflows:
     build-and-test:
       jobs:
